# gentoo-overlay

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: abseil-cpp.yml  cromite.yml  (+17 more)
metadata/: layout.conf
profiles/: package.use.mask  repo_name
www-client/ungoogled-chromium/files/: Manifest  ai_context_bound_object_set-variant.patch  avif_image_decoder.cc  bad-font-gc000.patch  bad-font-gc0000.patch  callee_saved_registers.diff  chromium-113-compiler-custom-cflags.patch  chromium-113-compiler.patch  chromium-114-compiler-custom-cflags.patch  chromium-117-material_color_utilities.patch  chromium-121-libxml.patch  chromium-121-qrcode-r1.patch  chromium-123-cloud_authenticator.patch  chromium-123-libstdc++.patch  chromium-126-observers-fix.patch  chromium-127-cargo_crate.patch  chromium-127-crabby.patch  chromium-127-fontations.patch  chromium-128-cfi-split-lto-unit.patch  chromium-128-fontations.patch  chromium-129-libstdc++.patch  chromium-131-fontations.patch  chromium-132-crabby.patch  chromium-132-fontations.patch  chromium-132-mold.patch  chromium-132-no-link-builtins.patch  chromium-132-no-rust.patch  chromium-133-fontations.patch  chromium-133-libstdc++.patch  chromium-135-crabby.patch  chromium-135-fontations.patch  chromium-135-opus.patch  chromium-136-fontations.patch  chromium-137-gcc.patch  chromium-137-libstdc++.patch  chromium-137-no-rust.patch  chromium-138-crabby.patch  chromium-138-fontations.patch  chromium-138-gcc.patch  chromium-138-no-rust.patch  (+129 more)
www-client/ungoogled-chromium/files/clang/: clang-15-fixes.patch
www-client/ungoogled-chromium/files/disable/: swiftshader-2.patch
www-client/ungoogled-chromium/files/ppc64le/libaom/: 0001-Add-ppc64-target-to-libaom.patch
www-client/ungoogled-chromium/files/ppc64le/sandbox/: 0001-sandbox-linux-Update-syscall-helpers-lists-for-ppc64.patch
(+2065 files in other folders)
